--- a/css/owl.css
+++ b/css/owl.css
@@ -251,6 +251,6 @@
   border-radius: 50%;
 }
 .owl-theme .owl-dots .owl-dot.active span {
-  background: none repeat scroll 0 0 #cda274;
-  border: 2px solid #cda274;
+  background: none repeat scroll 0 0 #4285f4;
+  border: 2px solid #4285f4;
 }
